
[TestNoUnnecessaryTypeAssertion/invalid-0 - 1]
Diagnostic 1: unnecessaryAssertion (1:13 - 1:15)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const foo = <3>3;
     |             ~~~
  Label: This expression already has the type '3' (1:16 - 1:16)
   1 | const foo = <3>3;
     |                ^ This expression already has the type '3'
  Label: Casting it to '3' is unnecessary (1:13 - 1:15)
   1 | const foo = <3>3;
     |             ^^^ Casting it to '3' is unnecessary
---

[TestNoUnnecessaryTypeAssertion/invalid-1 - 1]
Diagnostic 1: unnecessaryAssertion (1:15 - 1:18)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const foo = 3 as 3;
     |               ~~~~
  Label: This expression already has the type '3' (1:13 - 1:13)
   1 | const foo = 3 as 3;
     |             ^ This expression already has the type '3'
  Label: Casting it to '3' is unnecessary (1:15 - 1:18)
   1 | const foo = 3 as 3;
     |               ^^^^ Casting it to '3' is unnecessary
---

[TestNoUnnecessaryTypeAssertion/invalid-2 - 1]
Diagnostic 1: unnecessaryAssertion (3:27 - 3:31)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | const num = 42;
   3 | const alsoRedundant = num as 42;
     |                           ~~~~~
   4 |       
  Label: This expression already has the type '42' (3:23 - 3:25)
   2 | const num = 42;
   3 | const alsoRedundant = num as 42;
     |                       ^^^ This expression already has the type '42'
   4 |       
  Label: Casting it to '42' is unnecessary (3:27 - 3:31)
   2 | const num = 42;
   3 | const alsoRedundant = num as 42;
     |                           ^^^^^ Casting it to '42' is unnecessary
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-3 - 1]
Diagnostic 1: unnecessaryAssertion (3:24 - 3:32)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | const str: string = 'hello';
   3 | const redundant =  str as string;
     |                        ~~~~~~~~~
   4 |           
  Label: This expression already has the type 'string' (3:20 - 3:22)
   2 | const str: string = 'hello';
   3 | const redundant =  str as string;
     |                    ^^^ This expression already has the type 'string'
   4 |           
  Label: Casting it to 'string' is unnecessary (3:24 - 3:32)
   2 | const str: string = 'hello';
   3 | const redundant =  str as string;
     |                        ^^^^^^^^^ Casting it to 'string' is unnecessary
   4 |           
---

[TestNoUnnecessaryTypeAssertion/invalid-4 - 1]
Diagnostic 1: unnecessaryAssertion (3:21 - 3:25)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 |         type Foo = 3;
   3 |         const foo = <Foo>3;
     |                     ~~~~~
   4 |       
  Label: This expression already has the type '3' (3:26 - 3:26)
   2 |         type Foo = 3;
   3 |         const foo = <Foo>3;
     |                          ^ This expression already has the type '3'
   4 |       
  Label: Casting it to '3' is unnecessary (3:21 - 3:25)
   2 |         type Foo = 3;
   3 |         const foo = <Foo>3;
     |                     ^^^^^ Casting it to '3' is unnecessary
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-5 - 1]
Diagnostic 1: unnecessaryAssertion (3:23 - 3:28)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 |         type Foo = 3;
   3 |         const foo = 3 as Foo;
     |                       ~~~~~~
   4 |       
  Label: This expression already has the type '3' (3:21 - 3:21)
   2 |         type Foo = 3;
   3 |         const foo = 3 as Foo;
     |                     ^ This expression already has the type '3'
   4 |       
  Label: Casting it to '3' is unnecessary (3:23 - 3:28)
   2 |         type Foo = 3;
   3 |         const foo = 3 as Foo;
     |                       ^^^^^^ Casting it to '3' is unnecessary
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-6 - 1]
Diagnostic 1: unnecessaryAssertion (3:16 - 3:16)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | const foo = 3;
   3 | const bar = foo!;
     |                ~
   4 |       
  Label: This expression already has the type '3' (3:13 - 3:15)
   2 | const foo = 3;
   3 | const bar = foo!;
     |             ^^^ This expression already has the type '3'
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-7 - 1]
Diagnostic 1: unnecessaryAssertion (2:21 - 2:29)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = (3 + 5) as number;
     |                     ~~~~~~~~~
   3 |       
  Label: This expression already has the type 'number' (2:14 - 2:18)
   1 | 
   2 | const foo = (3 + 5) as number;
     |              ^^^^^ This expression already has the type 'number'
   3 |       
  Label: Casting it to 'number' is unnecessary (2:21 - 2:29)
   1 | 
   2 | const foo = (3 + 5) as number;
     |                     ^^^^^^^^^ Casting it to 'number' is unnecessary
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-8 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:20)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = <number>(3 + 5);
     |             ~~~~~~~~
   3 |       
  Label: This expression already has the type 'number' (2:22 - 2:26)
   1 | 
   2 | const foo = <number>(3 + 5);
     |                      ^^^^^ This expression already has the type 'number'
   3 |       
  Label: Casting it to 'number' is unnecessary (2:13 - 2:20)
   1 | 
   2 | const foo = <number>(3 + 5);
     |             ^^^^^^^^ Casting it to 'number' is unnecessary
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-9 - 1]
Diagnostic 1: unnecessaryAssertion (3:21 - 3:26)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | type Foo = number;
   3 | const foo = (3 + 5) as Foo;
     |                     ~~~~~~
   4 |       
  Label: This expression already has the type 'number' (3:14 - 3:18)
   2 | type Foo = number;
   3 | const foo = (3 + 5) as Foo;
     |              ^^^^^ This expression already has the type 'number'
   4 |       
  Label: Casting it to 'number' is unnecessary (3:21 - 3:26)
   2 | type Foo = number;
   3 | const foo = (3 + 5) as Foo;
     |                     ^^^^^^ Casting it to 'number' is unnecessary
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-10 - 1]
Diagnostic 1: unnecessaryAssertion (3:13 - 3:17)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | type Foo = number;
   3 | const foo = <Foo>(3 + 5);
     |             ~~~~~
   4 |       
  Label: This expression already has the type 'number' (3:19 - 3:23)
   2 | type Foo = number;
   3 | const foo = <Foo>(3 + 5);
     |                   ^^^^^ This expression already has the type 'number'
   4 |       
  Label: Casting it to 'number' is unnecessary (3:13 - 3:17)
   2 | type Foo = number;
   3 | const foo = <Foo>(3 + 5);
     |             ^^^^^ Casting it to 'number' is unnecessary
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-11 - 1]
Diagnostic 1: unnecessaryAssertion (3:4 - 3:4)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | let bar: number = 1;
   3 | bar! + 1;
     |    ~
   4 |       
  Label: This expression already has the type 'number' (3:1 - 3:3)
   2 | let bar: number = 1;
   3 | bar! + 1;
     | ^^^ This expression already has the type 'number'
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-12 - 1]
Diagnostic 1: unnecessaryAssertion (3:4 - 3:4)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | let bar!: number;
   3 | bar! + 1;
     |    ~
   4 |       
  Label: This expression already has the type 'number' (3:1 - 3:3)
   2 | let bar!: number;
   3 | bar! + 1;
     | ^^^ This expression already has the type 'number'
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-13 - 1]
Diagnostic 1: unnecessaryAssertion (4:4 - 4:4)
Message: This assertion is unnecessary since it does not change the type of the expression.
   3 | bar = 1;
   4 | bar! + 1;
     |    ~
   5 |       
  Label: This expression already has the type 'number' (4:1 - 4:3)
   3 | bar = 1;
   4 | bar! + 1;
     | ^^^ This expression already has the type 'number'
   5 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-14 - 1]
Diagnostic 1: unnecessaryAssertion (3:22 - 3:22)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 |         declare const y: number;
   3 |         console.log(y!);
     |                      ~
   4 |       
  Label: This expression already has the type 'number' (3:21 - 3:21)
   2 |         declare const y: number;
   3 |         console.log(y!);
     |                     ^ This expression already has the type 'number'
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-15 - 1]
Diagnostic 1: unnecessaryAssertion (1:6 - 1:6)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | Proxy!;
     |      ~
  Label: This expression already has the type 'ProxyConstructor' (1:1 - 1:5)
   1 | Proxy!;
     | ^^^^^ This expression already has the type 'ProxyConstructor'
---

[TestNoUnnecessaryTypeAssertion/invalid-16 - 1]
Diagnostic 1: unnecessaryAssertion (3:13 - 3:13)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | function foo<T extends string>(bar: T) {
   3 |   return bar!;
     |             ~
   4 | }
  Label: This expression already has the type 'string' (3:10 - 3:12)
   2 | function foo<T extends string>(bar: T) {
   3 |   return bar!;
     |          ^^^ This expression already has the type 'string'
   4 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-17 - 1]
Diagnostic 1: unnecessaryAssertion (3:13 - 3:17)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | declare const foo: Foo;
   3 | const bar = <Foo>foo;
     |             ~~~~~
   4 |       
  Label: This expression already has the type 'Foo' (3:18 - 3:20)
   2 | declare const foo: Foo;
   3 | const bar = <Foo>foo;
     |                  ^^^ This expression already has the type 'Foo'
   4 |       
  Label: Casting it to 'Foo' is unnecessary (3:13 - 3:17)
   2 | declare const foo: Foo;
   3 | const bar = <Foo>foo;
     |             ^^^^^ Casting it to 'Foo' is unnecessary
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-18 - 1]
Diagnostic 1: unnecessaryAssertion (3:30 - 3:38)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | declare const prop: string;
   3 | ['foo', 'bar'].includes(prop as string);
     |                              ~~~~~~~~~
   4 |       
  Label: This expression already has the type 'string' (3:25 - 3:28)
   2 | declare const prop: string;
   3 | ['foo', 'bar'].includes(prop as string);
     |                         ^^^^ This expression already has the type 'string'
   4 |       
  Label: Casting it to 'string' is unnecessary (3:30 - 3:38)
   2 | declare const prop: string;
   3 | ['foo', 'bar'].includes(prop as string);
     |                              ^^^^^^^^^ Casting it to 'string' is unnecessary
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-19 - 1]
Diagnostic 1: unnecessaryAssertion (3:36 - 3:61)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | async function mergeWithDefaults(loadModule: () => Promise<Record<string, unknown>>) {
   3 |   const mod = (await loadModule()) as Record<string, unknown>;
     |                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |   return { ...mod, extra: true };
  Label: This expression already has the type 'Record<string, unknown>' (3:16 - 3:33)
   2 | async function mergeWithDefaults(loadModule: () => Promise<Record<string, unknown>>) {
   3 |   const mod = (await loadModule()) as Record<string, unknown>;
     |                ^^^^^^^^^^^^^^^^^^ This expression already has the type 'Record<string, unknown>'
   4 |   return { ...mod, extra: true };
  Label: Casting it to 'Record<string, unknown>' is unnecessary (3:36 - 3:61)
   2 | async function mergeWithDefaults(loadModule: () => Promise<Record<string, unknown>>) {
   3 |   const mod = (await loadModule()) as Record<string, unknown>;
     |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ Casting it to 'Record<string, unknown>' is unnecessary
   4 |   return { ...mod, extra: true };
---

[TestNoUnnecessaryTypeAssertion/invalid-20 - 1]
Diagnostic 1: unnecessaryAssertion (3:65 - 3:73)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | function unwrap(input: string | number): number {
   3 |   return typeof input === 'string' ? parseFloat(input) : (input as number);
     |                                                                 ~~~~~~~~~
   4 | }
  Label: This expression already has the type 'number' (3:59 - 3:63)
   2 | function unwrap(input: string | number): number {
   3 |   return typeof input === 'string' ? parseFloat(input) : (input as number);
     |                                                           ^^^^^ This expression already has the type 'number'
   4 | }
  Label: Casting it to 'number' is unnecessary (3:65 - 3:73)
   2 | function unwrap(input: string | number): number {
   3 |   return typeof input === 'string' ? parseFloat(input) : (input as number);
     |                                                                 ^^^^^^^^^ Casting it to 'number' is unnecessary
   4 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-21 - 1]
Diagnostic 1: contextuallyUnnecessary (4:10 - 4:10)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   3 | let s: string | null = null;
   4 | nonNull(s!);
     |          ~
   5 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-22 - 1]
Diagnostic 1: contextuallyUnnecessary (3:27 - 3:27)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | const x: number | null = null;
   3 | const y: number | null = x!;
     |                           ~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-23 - 1]
Diagnostic 1: contextuallyUnnecessary (4:26 - 4:26)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   3 | class Foo {
   4 |   prop: number | null = x!;
     |                          ~
   5 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-24 - 1]
Diagnostic 1: unnecessaryAssertion (5:7 - 5:7)
Message: This assertion is unnecessary since it does not change the type of the expression.
   4 | class Mx {
   5 |   @a(b!)
     |       ~
   6 |   private prop = 1;
  Label: This expression already has the type '"asdf"' (5:6 - 5:6)
   4 | class Mx {
   5 |   @a(b!)
     |      ^ This expression already has the type '"asdf"'
   6 |   private prop = 1;
---

[TestNoUnnecessaryTypeAssertion/invalid-25 - 1]
Diagnostic 1: contextuallyUnnecessary (9:28 - 9:28)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   8 | function Test(props: { id?: string | number }) {
   9 |   return <div key={props.id!} />;
     |                            ~
  10 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-26 - 1]
Diagnostic 1: contextuallyUnnecessary (5:2 - 5:2)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   4 | y = x!;
   5 | y! = 0;
     |  ~
   6 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-27 - 1]
Diagnostic 1: contextuallyUnnecessary (3:33 - 3:33)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | declare function foo(arg?: number): number | void;
   3 | const bar: number | void = foo()!;
     |                                 ~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-28 - 1]
Diagnostic 1: unnecessaryAssertion (3:16 - 3:16)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | declare function foo(): number;
   3 | const a = foo()!;
     |                ~
   4 |       
  Label: This expression already has the type 'number' (3:11 - 3:15)
   2 | declare function foo(): number;
   3 | const a = foo()!;
     |           ^^^^^ This expression already has the type 'number'
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-29 - 1]
Diagnostic 1: unnecessaryAssertion (2:21 - 2:21)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const b = new Date()!;
     |                     ~
   3 |       
  Label: This expression already has the type 'Date' (2:11 - 2:20)
   1 | 
   2 | const b = new Date()!;
     |           ^^^^^^^^^^ This expression already has the type 'Date'
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-30 - 1]
Diagnostic 1: unnecessaryAssertion (2:18 - 2:18)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const b = (1 + 1)!;
     |                  ~
   3 |       
  Label: This expression already has the type 'number' (2:11 - 2:17)
   1 | 
   2 | const b = (1 + 1)!;
     |           ^^^^^^^ This expression already has the type 'number'
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-31 - 1]
Diagnostic 1: unnecessaryAssertion (3:17 - 3:25)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | declare function foo(): number;
   3 | const a = foo() as number;
     |                 ~~~~~~~~~
   4 |       
  Label: This expression already has the type 'number' (3:11 - 3:15)
   2 | declare function foo(): number;
   3 | const a = foo() as number;
     |           ^^^^^ This expression already has the type 'number'
   4 |       
  Label: Casting it to 'number' is unnecessary (3:17 - 3:25)
   2 | declare function foo(): number;
   3 | const a = foo() as number;
     |                 ^^^^^^^^^ Casting it to 'number' is unnecessary
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-32 - 1]
Diagnostic 1: unnecessaryAssertion (3:11 - 3:18)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | declare function foo(): number;
   3 | const a = <number>foo();
     |           ~~~~~~~~
   4 |       
  Label: This expression already has the type 'number' (3:19 - 3:23)
   2 | declare function foo(): number;
   3 | const a = <number>foo();
     |                   ^^^^^ This expression already has the type 'number'
   4 |       
  Label: Casting it to 'number' is unnecessary (3:11 - 3:18)
   2 | declare function foo(): number;
   3 | const a = <number>foo();
     |           ^^^^^^^^ Casting it to 'number' is unnecessary
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-33 - 1]
Diagnostic 1: unnecessaryAssertion (4:8 - 4:12)
Message: This assertion is unnecessary since it does not change the type of the expression.
   3 | declare function foo(): RT;
   4 | (foo() as RT).log;
     |        ~~~~~
   5 |       
  Label: This expression already has the type 'RT' (4:2 - 4:6)
   3 | declare function foo(): RT;
   4 | (foo() as RT).log;
     |  ^^^^^ This expression already has the type 'RT'
   5 |       
  Label: Casting it to 'RT' is unnecessary (4:8 - 4:12)
   3 | declare function foo(): RT;
   4 | (foo() as RT).log;
     |        ^^^^^ Casting it to 'RT' is unnecessary
   5 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-34 - 1]
Diagnostic 1: unnecessaryAssertion (3:20 - 3:20)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | declare const arr: object[];
   3 | const item = arr[0]!;
     |                    ~
   4 |       
  Label: This expression already has the type 'object' (3:14 - 3:19)
   2 | declare const arr: object[];
   3 | const item = arr[0]!;
     |              ^^^^^^ This expression already has the type 'object'
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-35 - 1]
Diagnostic 1: unnecessaryAssertion (2:25 - 2:33)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = (  3 + 5  ) as number;
     |                         ~~~~~~~~~
   3 |       
  Label: This expression already has the type 'number' (2:16 - 2:20)
   1 | 
   2 | const foo = (  3 + 5  ) as number;
     |                ^^^^^ This expression already has the type 'number'
   3 |       
  Label: Casting it to 'number' is unnecessary (2:25 - 2:33)
   1 | 
   2 | const foo = (  3 + 5  ) as number;
     |                         ^^^^^^^^^ Casting it to 'number' is unnecessary
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-36 - 1]
Diagnostic 1: unnecessaryAssertion (2:32 - 2:40)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = (  3 + 5  ) /*as*/ as number;
     |                                ~~~~~~~~~
   3 |       
  Label: This expression already has the type 'number' (2:16 - 2:20)
   1 | 
   2 | const foo = (  3 + 5  ) /*as*/ as number;
     |                ^^^^^ This expression already has the type 'number'
   3 |       
  Label: Casting it to 'number' is unnecessary (2:32 - 2:40)
   1 | 
   2 | const foo = (  3 + 5  ) /*as*/ as number;
     |                                ^^^^^^^^^ Casting it to 'number' is unnecessary
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-37 - 1]
Diagnostic 1: unnecessaryAssertion (3:12 - 6:3)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | const foo = (  3 + 5
   3 |   ) /*as*/ as //as
     |            ~~~~~~~
   4 |   (
     | ~~~
   5 |     number
     | ~~~~~~~~~~
   6 |   );
     | ~~~
   7 |       
  Label: This expression already has the type 'number' (2:16 - 2:20)
   1 | 
   2 | const foo = (  3 + 5
     |                ^^^^^ This expression already has the type 'number'
   3 |   ) /*as*/ as //as
  Label: Casting it to 'number' is unnecessary (3:12 - 6:3)
   2 | const foo = (  3 + 5
   3 |   ) /*as*/ as //as
     |            ^^^^^^^ Casting it to 'number' is unnecessary
   4 |   (
     | ^^^ Casting it to 'number' is unnecessary
   5 |     number
     | ^^^^^^^^^^ Casting it to 'number' is unnecessary
   6 |   );
     | ^^^ Casting it to 'number' is unnecessary
   7 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-38 - 1]
Diagnostic 1: unnecessaryAssertion (2:34 - 2:42)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = (3 + (5 as number) ) as number;
     |                                  ~~~~~~~~~
   3 |       
  Label: This expression already has the type 'number' (2:14 - 2:30)
   1 | 
   2 | const foo = (3 + (5 as number) ) as number;
     |              ^^^^^^^^^^^^^^^^^ This expression already has the type 'number'
   3 |       
  Label: Casting it to 'number' is unnecessary (2:34 - 2:42)
   1 | 
   2 | const foo = (3 + (5 as number) ) as number;
     |                                  ^^^^^^^^^ Casting it to 'number' is unnecessary
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-39 - 1]
Diagnostic 1: unnecessaryAssertion (2:25 - 2:33)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = 3 + 5/*as*/ as number;
     |                         ~~~~~~~~~
   3 |       
  Label: This expression already has the type 'number' (2:13 - 2:17)
   1 | 
   2 | const foo = 3 + 5/*as*/ as number;
     |             ^^^^^ This expression already has the type 'number'
   3 |       
  Label: Casting it to 'number' is unnecessary (2:25 - 2:33)
   1 | 
   2 | const foo = 3 + 5/*as*/ as number;
     |                         ^^^^^^^^^ Casting it to 'number' is unnecessary
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-40 - 1]
Diagnostic 1: unnecessaryAssertion (2:30 - 2:38)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = 3 + 5/*a*/ /*b*/ as number;
     |                              ~~~~~~~~~
   3 |       
  Label: This expression already has the type 'number' (2:13 - 2:17)
   1 | 
   2 | const foo = 3 + 5/*a*/ /*b*/ as number;
     |             ^^^^^ This expression already has the type 'number'
   3 |       
  Label: Casting it to 'number' is unnecessary (2:30 - 2:38)
   1 | 
   2 | const foo = 3 + 5/*a*/ /*b*/ as number;
     |                              ^^^^^^^^^ Casting it to 'number' is unnecessary
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-41 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:22)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = <(number)>(3 + 5);
     |             ~~~~~~~~~~
   3 |       
  Label: This expression already has the type 'number' (2:24 - 2:28)
   1 | 
   2 | const foo = <(number)>(3 + 5);
     |                        ^^^^^ This expression already has the type 'number'
   3 |       
  Label: Casting it to 'number' is unnecessary (2:13 - 2:22)
   1 | 
   2 | const foo = <(number)>(3 + 5);
     |             ^^^^^^^^^^ Casting it to 'number' is unnecessary
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-42 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:26)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = < ( number ) >( 3 + 5 );
     |             ~~~~~~~~~~~~~~
   3 |       
  Label: This expression already has the type 'number' (2:29 - 2:33)
   1 | 
   2 | const foo = < ( number ) >( 3 + 5 );
     |                             ^^^^^ This expression already has the type 'number'
   3 |       
  Label: Casting it to 'number' is unnecessary (2:13 - 2:26)
   1 | 
   2 | const foo = < ( number ) >( 3 + 5 );
     |             ^^^^^^^^^^^^^^ Casting it to 'number' is unnecessary
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-43 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:20)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = <number> /* a */ (3 + 5);
     |             ~~~~~~~~
   3 |       
  Label: This expression already has the type 'number' (2:31 - 2:35)
   1 | 
   2 | const foo = <number> /* a */ (3 + 5);
     |                               ^^^^^ This expression already has the type 'number'
   3 |       
  Label: Casting it to 'number' is unnecessary (2:13 - 2:20)
   1 | 
   2 | const foo = <number> /* a */ (3 + 5);
     |             ^^^^^^^^ Casting it to 'number' is unnecessary
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-44 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:28)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = <number /* a */>(3 + 5);
     |             ~~~~~~~~~~~~~~~~
   3 |       
  Label: This expression already has the type 'number' (2:30 - 2:34)
   1 | 
   2 | const foo = <number /* a */>(3 + 5);
     |                              ^^^^^ This expression already has the type 'number'
   3 |       
  Label: Casting it to 'number' is unnecessary (2:13 - 2:28)
   1 | 
   2 | const foo = <number /* a */>(3 + 5);
     |             ^^^^^^^^^^^^^^^^ Casting it to 'number' is unnecessary
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-45 - 1]
Diagnostic 1: unnecessaryAssertion (5:17 - 5:17)
Message: This assertion is unnecessary since it does not change the type of the expression.
   4 |   for (let i = 0; i < items.length; i++) {
   5 |     foo(items[i]!);
     |                 ~
   6 |   }
  Label: This expression already has the type 'string' (5:9 - 5:16)
   4 |   for (let i = 0; i < items.length; i++) {
   5 |     foo(items[i]!);
     |         ^^^^^^^^ This expression already has the type 'string'
   6 |   }
---

[TestNoUnnecessaryTypeAssertion/invalid-46 - 1]
Diagnostic 1: unnecessaryAssertion (5:19 - 5:39)
Message: This assertion is unnecessary since it does not change the type of the expression.
   4 | };
   5 | const bar = foo.a as string | undefined;
     |                   ~~~~~~~~~~~~~~~~~~~~~
   6 |       
  Label: This expression already has the type 'string | undefined' (5:13 - 5:17)
   4 | };
   5 | const bar = foo.a as string | undefined;
     |             ^^^^^ This expression already has the type 'string | undefined'
   6 |       
  Label: Casting it to 'string | undefined' is unnecessary (5:19 - 5:39)
   4 | };
   5 | const bar = foo.a as string | undefined;
     |                   ^^^^^^^^^^^^^^^^^^^^^ Casting it to 'string | undefined' is unnecessary
   6 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-47 - 1]
Diagnostic 1: unnecessaryAssertion (5:19 - 5:39)
Message: This assertion is unnecessary since it does not change the type of the expression.
   4 | };
   5 | const bar = foo.a as string | undefined;
     |                   ~~~~~~~~~~~~~~~~~~~~~
   6 |       
  Label: This expression already has the type 'string | undefined' (5:13 - 5:17)
   4 | };
   5 | const bar = foo.a as string | undefined;
     |             ^^^^^ This expression already has the type 'string | undefined'
   6 |       
  Label: Casting it to 'string | undefined' is unnecessary (5:19 - 5:39)
   4 | };
   5 | const bar = foo.a as string | undefined;
     |                   ^^^^^^^^^^^^^^^^^^^^^ Casting it to 'string | undefined' is unnecessary
   6 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-48 - 1]
Diagnostic 1: unnecessaryAssertion (2:26 - 2:26)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | varDeclarationFromFixture!;
     |                          ~
   3 |       
  Label: This expression already has the type 'number' (2:1 - 2:25)
   1 | 
   2 | varDeclarationFromFixture!;
     | ^^^^^^^^^^^^^^^^^^^^^^^^^ This expression already has the type 'number'
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-49 - 1]
Diagnostic 1: unnecessaryAssertion (3:2 - 3:2)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | var x = 1;
   3 | x!;
     |  ~
   4 |       
  Label: This expression already has the type 'number' (3:1 - 3:1)
   2 | var x = 1;
   3 | x!;
     | ^ This expression already has the type 'number'
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-50 - 1]
Diagnostic 1: unnecessaryAssertion (4:4 - 4:4)
Message: This assertion is unnecessary since it does not change the type of the expression.
   3 | {
   4 |   x!;
     |    ~
   5 | }
  Label: This expression already has the type 'number' (4:3 - 4:3)
   3 | {
   4 |   x!;
     |   ^ This expression already has the type 'number'
   5 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-51 - 1]
Diagnostic 1: unnecessaryAssertion (3:18 - 3:21)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | class T {
   3 |   readonly a = 3 as 3;
     |                  ~~~~
   4 | }
  Label: This expression already has the type '3' (3:16 - 3:16)
   2 | class T {
   3 |   readonly a = 3 as 3;
     |                ^ This expression already has the type '3'
   4 | }
  Label: Casting it to '3' is unnecessary (3:18 - 3:21)
   2 | class T {
   3 |   readonly a = 3 as 3;
     |                  ^^^^ Casting it to '3' is unnecessary
   4 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-52 - 1]
Diagnostic 1: unnecessaryAssertion (5:19 - 5:22)
Message: This assertion is unnecessary since it does not change the type of the expression.
   4 | class T {
   5 |   readonly a = 10 as S;
     |                   ~~~~
   6 | }
  Label: This expression already has the type '10' (5:16 - 5:17)
   4 | class T {
   5 |   readonly a = 10 as S;
     |                ^^ This expression already has the type '10'
   6 | }
  Label: Casting it to '10' is unnecessary (5:19 - 5:22)
   4 | class T {
   5 |   readonly a = 10 as S;
     |                   ^^^^ Casting it to '10' is unnecessary
   6 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-53 - 1]
Diagnostic 1: unnecessaryAssertion (3:24 - 3:32)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | class T {
   3 |   readonly a = (3 + 5) as number;
     |                        ~~~~~~~~~
   4 | }
  Label: This expression already has the type 'number' (3:17 - 3:21)
   2 | class T {
   3 |   readonly a = (3 + 5) as number;
     |                 ^^^^^ This expression already has the type 'number'
   4 | }
  Label: Casting it to 'number' is unnecessary (3:24 - 3:32)
   2 | class T {
   3 |   readonly a = (3 + 5) as number;
     |                        ^^^^^^^^^ Casting it to 'number' is unnecessary
   4 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-54 - 1]
Diagnostic 1: contextuallyUnnecessary (3:50 - 3:50)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | const a = '';
   3 | const b: string | undefined = (a ? undefined : a)!;
     |                                                  ~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-55 - 1]
Diagnostic 1: unnecessaryAssertion (8:13 - 8:23)
Message: This assertion is unnecessary since it does not change the type of the expression.
   7 | declare const a: T.Value1;
   8 | const b = a as T.Value1;
     |             ~~~~~~~~~~~
   9 |       
  Label: This expression already has the type 'T.Value1' (8:11 - 8:11)
   7 | declare const a: T.Value1;
   8 | const b = a as T.Value1;
     |           ^ This expression already has the type 'T.Value1'
   9 |       
  Label: Casting it to 'T.Value1' is unnecessary (8:13 - 8:23)
   7 | declare const a: T.Value1;
   8 | const b = a as T.Value1;
     |             ^^^^^^^^^^^ Casting it to 'T.Value1' is unnecessary
   9 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-56 - 1]
Diagnostic 1: contextuallyUnnecessary (3:25 - 3:25)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | const foo: unknown = {};
   3 | const bar: unknown = foo!;
     |                         ~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-57 - 1]
Diagnostic 1: contextuallyUnnecessary (4:8 - 4:8)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   3 | const baz: unknown = {};
   4 | foo(baz!);
     |        ~
   5 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-58 - 1]
Diagnostic 1: unnecessaryAssertion (7:3 - 7:10)
Message: This assertion is unnecessary since it does not change the type of the expression.
   6 | if (isString(foo)) {
   7 |   <string>foo;
     |   ~~~~~~~~
   8 | }
  Label: This expression already has the type 'string' (7:11 - 7:13)
   6 | if (isString(foo)) {
   7 |   <string>foo;
     |           ^^^ This expression already has the type 'string'
   8 | }
  Label: Casting it to 'string' is unnecessary (7:3 - 7:10)
   6 | if (isString(foo)) {
   7 |   <string>foo;
     |   ^^^^^^^^ Casting it to 'string' is unnecessary
   8 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-59 - 1]
Diagnostic 1: unnecessaryAssertion (4:1 - 4:14)
Message: This assertion is unnecessary since it does not change the type of the expression.
   3 | declare const bar: Promise<Foo>;
   4 | <Promise<Foo>>bar;
     | ~~~~~~~~~~~~~~
   5 |             
  Label: This expression already has the type 'Promise<Foo>' (4:15 - 4:17)
   3 | declare const bar: Promise<Foo>;
   4 | <Promise<Foo>>bar;
     |               ^^^ This expression already has the type 'Promise<Foo>'
   5 |             
  Label: Casting it to 'Promise<Foo>' is unnecessary (4:1 - 4:14)
   3 | declare const bar: Promise<Foo>;
   4 | <Promise<Foo>>bar;
     | ^^^^^^^^^^^^^^ Casting it to 'Promise<Foo>' is unnecessary
   5 |             
---

[TestNoUnnecessaryTypeAssertion/invalid-60 - 1]
Diagnostic 1: unnecessaryAssertion (1:16 - 1:23)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = true as const;
     |                ~~~~~~~~
  Label: This expression already has the type 'true' (1:11 - 1:14)
   1 | const a = true as const;
     |           ^^^^ This expression already has the type 'true'
  Label: Casting it to 'true' is unnecessary (1:16 - 1:23)
   1 | const a = true as const;
     |                ^^^^^^^^ Casting it to 'true' is unnecessary
---

[TestNoUnnecessaryTypeAssertion/invalid-61 - 1]
Diagnostic 1: unnecessaryAssertion (1:11 - 1:17)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = <const>true;
     |           ~~~~~~~
  Label: This expression already has the type 'true' (1:18 - 1:21)
   1 | const a = <const>true;
     |                  ^^^^ This expression already has the type 'true'
  Label: Casting it to 'true' is unnecessary (1:11 - 1:17)
   1 | const a = <const>true;
     |           ^^^^^^^ Casting it to 'true' is unnecessary
---

[TestNoUnnecessaryTypeAssertion/invalid-62 - 1]
Diagnostic 1: unnecessaryAssertion (1:13 - 1:20)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = 1 as const;
     |             ~~~~~~~~
  Label: This expression already has the type '1' (1:11 - 1:11)
   1 | const a = 1 as const;
     |           ^ This expression already has the type '1'
  Label: Casting it to '1' is unnecessary (1:13 - 1:20)
   1 | const a = 1 as const;
     |             ^^^^^^^^ Casting it to '1' is unnecessary
---

[TestNoUnnecessaryTypeAssertion/invalid-63 - 1]
Diagnostic 1: unnecessaryAssertion (1:11 - 1:17)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = <const>1;
     |           ~~~~~~~
  Label: This expression already has the type '1' (1:18 - 1:18)
   1 | const a = <const>1;
     |                  ^ This expression already has the type '1'
  Label: Casting it to '1' is unnecessary (1:11 - 1:17)
   1 | const a = <const>1;
     |           ^^^^^^^ Casting it to '1' is unnecessary
---

[TestNoUnnecessaryTypeAssertion/invalid-64 - 1]
Diagnostic 1: unnecessaryAssertion (1:14 - 1:21)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = 1n as const;
     |              ~~~~~~~~
  Label: This expression already has the type '1n' (1:11 - 1:12)
   1 | const a = 1n as const;
     |           ^^ This expression already has the type '1n'
  Label: Casting it to '1n' is unnecessary (1:14 - 1:21)
   1 | const a = 1n as const;
     |              ^^^^^^^^ Casting it to '1n' is unnecessary
---

[TestNoUnnecessaryTypeAssertion/invalid-65 - 1]
Diagnostic 1: unnecessaryAssertion (1:11 - 1:17)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = <const>1n;
     |           ~~~~~~~
  Label: This expression already has the type '1n' (1:18 - 1:19)
   1 | const a = <const>1n;
     |                  ^^ This expression already has the type '1n'
  Label: Casting it to '1n' is unnecessary (1:11 - 1:17)
   1 | const a = <const>1n;
     |           ^^^^^^^ Casting it to '1n' is unnecessary
---

[TestNoUnnecessaryTypeAssertion/invalid-66 - 1]
Diagnostic 1: unnecessaryAssertion (1:15 - 1:22)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = `a` as const;
     |               ~~~~~~~~
  Label: This expression already has the type '"a"' (1:11 - 1:13)
   1 | const a = `a` as const;
     |           ^^^ This expression already has the type '"a"'
  Label: Casting it to '"a"' is unnecessary (1:15 - 1:22)
   1 | const a = `a` as const;
     |               ^^^^^^^^ Casting it to '"a"' is unnecessary
---

[TestNoUnnecessaryTypeAssertion/invalid-67 - 1]
Diagnostic 1: unnecessaryAssertion (1:15 - 1:22)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = 'a' as const;
     |               ~~~~~~~~
  Label: This expression already has the type '"a"' (1:11 - 1:13)
   1 | const a = 'a' as const;
     |           ^^^ This expression already has the type '"a"'
  Label: Casting it to '"a"' is unnecessary (1:15 - 1:22)
   1 | const a = 'a' as const;
     |               ^^^^^^^^ Casting it to '"a"' is unnecessary
---

[TestNoUnnecessaryTypeAssertion/invalid-68 - 1]
Diagnostic 1: unnecessaryAssertion (1:11 - 1:17)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = <const>'a';
     |           ~~~~~~~
  Label: This expression already has the type '"a"' (1:18 - 1:20)
   1 | const a = <const>'a';
     |                  ^^^ This expression already has the type '"a"'
  Label: Casting it to '"a"' is unnecessary (1:11 - 1:17)
   1 | const a = <const>'a';
     |           ^^^^^^^ Casting it to '"a"' is unnecessary
---

[TestNoUnnecessaryTypeAssertion/invalid-69 - 1]
Diagnostic 1: unnecessaryAssertion (3:20 - 3:27)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | class T {
   3 |   readonly a = 'a' as const;
     |                    ~~~~~~~~
   4 | }
  Label: This expression already has the type '"a"' (3:16 - 3:18)
   2 | class T {
   3 |   readonly a = 'a' as const;
     |                ^^^ This expression already has the type '"a"'
   4 | }
  Label: Casting it to '"a"' is unnecessary (3:20 - 3:27)
   2 | class T {
   3 |   readonly a = 'a' as const;
     |                    ^^^^^^^^ Casting it to '"a"' is unnecessary
   4 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-70 - 1]
Diagnostic 1: unnecessaryAssertion (8:13 - 8:20)
Message: This assertion is unnecessary since it does not change the type of the expression.
   7 | declare const a: T.Value1;
   8 | const b = a as const;
     |             ~~~~~~~~
   9 |       
  Label: This expression already has the type 'T.Value1' (8:11 - 8:11)
   7 | declare const a: T.Value1;
   8 | const b = a as const;
     |           ^ This expression already has the type 'T.Value1'
   9 |       
  Label: Casting it to 'T.Value1' is unnecessary (8:13 - 8:20)
   7 | declare const a: T.Value1;
   8 | const b = a as const;
     |             ^^^^^^^^ Casting it to 'T.Value1' is unnecessary
   9 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-71 - 1]
Diagnostic 1: unnecessaryAssertion (4:12 - 4:32)
Message: This assertion is unnecessary since it does not change the type of the expression.
   3 | 
   4 | const s2 = /** @type {string} */ (s);
     |            ~~~~~~~~~~~~~~~~~~~~~
   5 | 
  Label: This expression already has the type 'string' (4:35 - 4:35)
   3 | 
   4 | const s2 = /** @type {string} */ (s);
     |                                   ^ This expression already has the type 'string'
   5 | 
  Label: Casting it to 'string' is unnecessary (4:12 - 4:32)
   3 | 
   4 | const s2 = /** @type {string} */ (s);
     |            ^^^^^^^^^^^^^^^^^^^^^ Casting it to 'string' is unnecessary
   5 | 
---

[TestNoUnnecessaryTypeAssertion/invalid-72 - 1]
Diagnostic 1: unnecessaryAssertion (2:25 - 2:36)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | ((): undefined => {})() as undefined;
     |                         ~~~~~~~~~~~~
   3 |       
  Label: This expression already has the type 'undefined' (2:1 - 2:23)
   1 | 
   2 | ((): undefined => {})() as undefined;
     | ^^^^^^^^^^^^^^^^^^^^^^^ This expression already has the type 'undefined'
   3 |       
  Label: Casting it to 'undefined' is unnecessary (2:25 - 2:36)
   1 | 
   2 | ((): undefined => {})() as undefined;
     |                         ^^^^^^^^^^^^ Casting it to 'undefined' is unnecessary
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-73 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:21)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | (() => 1)() as number;
     |             ~~~~~~~~~
   3 |       
  Label: This expression already has the type 'number' (2:1 - 2:11)
   1 | 
   2 | (() => 1)() as number;
     | ^^^^^^^^^^^ This expression already has the type 'number'
   3 |       
  Label: Casting it to 'number' is unnecessary (2:13 - 2:21)
   1 | 
   2 | (() => 1)() as number;
     |             ^^^^^^^^^ Casting it to 'number' is unnecessary
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-74 - 1]
Diagnostic 1: unnecessaryAssertion (7:35 - 7:46)
Message: This assertion is unnecessary since it does not change the type of the expression.
   6 | 
   7 | ((value => {}) as Overloaded)('') as undefined;
     |                                   ~~~~~~~~~~~~
   8 |       
  Label: This expression already has the type 'undefined' (7:1 - 7:33)
   6 | 
   7 | ((value => {}) as Overloaded)('') as undefined;
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This expression already has the type 'undefined'
   8 |       
  Label: Casting it to 'undefined' is unnecessary (7:35 - 7:46)
   6 | 
   7 | ((value => {}) as Overloaded)('') as undefined;
     |                                   ^^^^^^^^^^^^ Casting it to 'undefined' is unnecessary
   8 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-75 - 1]
Diagnostic 1: contextuallyUnnecessary (3:9 - 3:16)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | function doThing(a: number) {}
   3 | doThing(5 as any);
     |         ~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-76 - 1]
Diagnostic 1: contextuallyUnnecessary (7:9 - 7:51)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   6 | function doThing(a: A) {}
   7 | doThing({ required: 'yes', alsoRequired: 1 } as any);
     |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   8 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-77 - 1]
Diagnostic 1: unnecessaryAssertion (1:11 - 1:23)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const x = 5 as any as 5;
     |           ~~~~~~~~~~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-78 - 1]
Diagnostic 1: unnecessaryAssertion (3:11 - 3:32)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | const v: number = 5;
   3 | const x = v as unknown as number;
     |           ~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-79 - 1]
Diagnostic 1: unnecessaryAssertion (3:11 - 3:28)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | const v: number = 5;
   3 | const x = v as any as number;
     |           ~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-80 - 1]
Diagnostic 1: unnecessaryAssertion (2:11 - 2:34)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const x = (1 + 1) as any as number;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-81 - 1]
Diagnostic 1: unnecessaryAssertion (2:16 - 2:39)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const x = 2 * ((1 + 1) as any as number);
     |                ~~~~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-82 - 1]
Diagnostic 1: unnecessaryAssertion (3:11 - 3:26)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | const v: number = 5;
   3 | const x = <number>(<any>v);
     |           ~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-83 - 1]
Diagnostic 1: unnecessaryAssertion (3:18 - 3:34)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | const obj = { id: '' };
   3 | const obj2 = obj as { id: string };
     |                  ~~~~~~~~~~~~~~~~~
   4 |       
  Label: This expression already has the type '{ id: string; }' (3:14 - 3:16)
   2 | const obj = { id: '' };
   3 | const obj2 = obj as { id: string };
     |              ^^^ This expression already has the type '{ id: string; }'
   4 |       
  Label: Casting it to '{ id: string; }' is unnecessary (3:18 - 3:34)
   2 | const obj = { id: '' };
   3 | const obj2 = obj as { id: string };
     |                  ^^^^^^^^^^^^^^^^^ Casting it to '{ id: string; }' is unnecessary
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-84 - 1]
Diagnostic 1: unnecessaryAssertion (3:14 - 3:41)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | const obj = { id: '' };
   3 | const obj2 = obj as any as { id: string };
     |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-85 - 1]
Diagnostic 1: unnecessaryAssertion (3:14 - 3:45)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | const obj = { id: '' };
   3 | const obj2 = obj as unknown as { id: string };
     |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-86 - 1]
Diagnostic 1: unnecessaryAssertion (3:16 - 3:39)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | const array = ['a', 'b'];
   3 | const array2 = array as any as string[];
     |                ~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-87 - 1]
Diagnostic 1: unnecessaryAssertion (3:16 - 3:43)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | const array = ['a', 'b'];
   3 | const array2 = array as unknown as string[];
     |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-88 - 1]
Diagnostic 1: contextuallyUnnecessary (7:4 - 7:12)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   6 | const a: A = 'a';
   7 | fn(a as AorB);
     |    ~~~~~~~~~
   8 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-89 - 1]
Diagnostic 1: unnecessaryAssertion (5:11 - 5:38)
Message: This assertion is unnecessary since it does not change the type of the expression.
   4 | }
   5 | const x = { a: 1 } as unknown as Props;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   6 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-90 - 1]
Diagnostic 1: unnecessaryAssertion (5:20 - 5:27)
Message: This assertion is unnecessary since it does not change the type of the expression.
   4 | }
   5 | const x = { a: 1 } as Props;
     |                    ~~~~~~~~
   6 |       
  Label: This expression already has the type '{ a: number; }' (5:11 - 5:18)
   4 | }
   5 | const x = { a: 1 } as Props;
     |           ^^^^^^^^ This expression already has the type '{ a: number; }'
   6 |       
  Label: Casting it to 'Props' is unnecessary (5:20 - 5:27)
   4 | }
   5 | const x = { a: 1 } as Props;
     |                    ^^^^^^^^ Casting it to 'Props' is unnecessary
   6 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-91 - 1]
Diagnostic 1: unnecessaryAssertion (5:25 - 5:54)
Message: This assertion is unnecessary since it does not change the type of the expression.
   4 | }
   5 | const fn = (): Props => ({ a: 1 }) as unknown as Props;
     |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   6 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-92 - 1]
Diagnostic 1: contextuallyUnnecessary (3:4 - 3:26)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | declare function fn(param: number): void;
   3 | fn(42 as unknown as number);
     |    ~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-93 - 1]
Diagnostic 1: contextuallyUnnecessary (3:4 - 3:22)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | declare function fn(param: number): void;
   3 | fn(42 as any as number);
     |    ~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-94 - 1]
Diagnostic 1: contextuallyUnnecessary (3:13 - 3:24)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | declare function fn(params: { param: number });
   3 | fn({ param: 42 as number });
     |             ~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-95 - 1]
Diagnostic 1: contextuallyUnnecessary (3:13 - 3:21)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | declare function fn(params: { param: number });
   3 | fn({ param: 42 as any });
     |             ~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-96 - 1]
Diagnostic 1: contextuallyUnnecessary (4:4 - 4:30)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   3 | declare function fn(param: StringOrNumber);
   4 | fn(42 as any as StringOrNumber);
     |    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-97 - 1]
Diagnostic 1: contextuallyUnnecessary (5:12 - 5:32)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   4 | const data = { a: 1 };
   5 | fn({ data: data as NumbersRecord });
     |            ~~~~~~~~~~~~~~~~~~~~~
   6 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-98 - 1]
Diagnostic 1: contextuallyUnnecessary (5:9 - 7:20)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   4 | fn({
   5 |   data: {
     |         ~
   6 |     a: 1,
     | ~~~~~~~~~
   7 |   } as NumbersRecord,
     | ~~~~~~~~~~~~~~~~~~~~
   8 | });
---

[TestNoUnnecessaryTypeAssertion/invalid-99 - 1]
Diagnostic 1: unnecessaryAssertion (5:16 - 5:74)
Message: This assertion is unnecessary since it does not change the type of the expression.
   4 | declare const updatedColumn: Json;
   5 | const result = updatedColumn as unknown as Tables<'my_table'>['my_column'];
     |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   6 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-100 - 1]
Diagnostic 1: contextuallyUnnecessary (6:12 - 6:23)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   5 | declare function fn<U extends T>(args: Pick<U, 'a'>): void;
   6 | fn<T>({ a: '' as string });
     |            ~~~~~~~~~~~~
   7 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-101 - 1]
Diagnostic 1: contextuallyUnnecessary (3:8 - 3:32)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | declare function update<T extends string>(value: T): void;
   3 | update('hi' as unknown as string);
     |        ~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-102 - 1]
Diagnostic 1: contextuallyUnnecessary (3:8 - 3:21)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | declare function update<T extends string>(value: T): void;
   3 | update('hi' as string);
     |        ~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-103 - 1]
Diagnostic 1: contextuallyUnnecessary (3:4 - 3:19)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | declare function fn(x: string[]): void;
   3 | fn(['hello'] as any);
     |    ~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-104 - 1]
Diagnostic 1: contextuallyUnnecessary (6:16 - 6:29)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   5 | declare const chat: ChatMessage[];
   6 | update({ chat: chat as Json[] });
     |                ~~~~~~~~~~~~~~
   7 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-105 - 1]
Diagnostic 1: contextuallyUnnecessary (6:16 - 6:29)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   5 | declare const chat: ChatMessage[];
   6 | update({ chat: chat as Json[] });
     |                ~~~~~~~~~~~~~~
   7 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-106 - 1]
Diagnostic 1: unnecessaryAssertion (7:11 - 7:27)
Message: This assertion is unnecessary since it does not change the type of the expression.
   6 | function fn2<T extends Node>(node: T): void {
   7 |   fn(node as NonNullable<T>);
     |           ~~~~~~~~~~~~~~~~~
   8 | }
  Label: This expression already has the type 'T' (7:6 - 7:9)
   6 | function fn2<T extends Node>(node: T): void {
   7 |   fn(node as NonNullable<T>);
     |      ^^^^ This expression already has the type 'T'
   8 | }
  Label: Casting it to 'NonNullable<T>' is unnecessary (7:11 - 7:27)
   6 | function fn2<T extends Node>(node: T): void {
   7 |   fn(node as NonNullable<T>);
     |           ^^^^^^^^^^^^^^^^^ Casting it to 'NonNullable<T>' is unnecessary
   8 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-107 - 1]
Diagnostic 1: contextuallyUnnecessary (11:4 - 11:9)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
  10 | declare const a: A;
  11 | fn(a as B);
     |    ~~~~~~
  12 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-108 - 1]
Diagnostic 1: contextuallyUnnecessary (4:38 - 4:50)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   3 | declare const b: readonly string[];
   4 | const fileNames: string[] = a.concat(b as string[]);
     |                                      ~~~~~~~~~~~~~
   5 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-109 - 1]
Diagnostic 1: contextuallyUnnecessary (4:4 - 4:18)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   3 | declare const value: string | number;
   4 | fn(value as number);
     |    ~~~~~~~~~~~~~~~
   5 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-110 - 1]
Diagnostic 1: contextuallyUnnecessary (12:6 - 12:16)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
  11 |   type: 'a',
  12 |   a: a as string,
     |      ~~~~~~~~~~~
  13 | };
---

[TestNoUnnecessaryTypeAssertion/invalid-111 - 1]
Diagnostic 1: contextuallyUnnecessary (12:6 - 12:16)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
  11 |   type: 'a',
  12 |   a: a as string,
     |      ~~~~~~~~~~~
  13 | };
---

[TestNoUnnecessaryTypeAssertion/invalid-112 - 1]
Diagnostic 1: contextuallyUnnecessary (5:7 - 5:17)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   4 | fn1(() => {
   5 |   fn2('hi' as any);
     |       ~~~~~~~~~~~
   6 | });
---

[TestNoUnnecessaryTypeAssertion/invalid-113 - 1]
Diagnostic 1: contextuallyUnnecessary (4:4 - 4:22)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   3 | declare function fn(value: Empty<string>): void;
   4 | fn({} as Empty<number>);
     |    ~~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-114 - 1]
Diagnostic 1: contextuallyUnnecessary (7:9 - 7:34)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   6 | const result: { item: Box<Empty<string>> } = identity({
   7 |   item: box as Box<Empty<boolean>>,
     |         ~~~~~~~~~~~~~~~~~~~~~~~~~~
   8 | });
---

[TestNoUnnecessaryTypeAssertion/invalid-115 - 1]
Diagnostic 1: contextuallyUnnecessary (4:3 - 4:33)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   3 | const callback: <T extends string>(value: T) => void =
   4 |   value as (text: string) => void;
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-116 - 1]
Diagnostic 1: contextuallyUnnecessary (3:26 - 3:35)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | function f<T extends string>(value: string) {
   3 |   const target: string = value as T;
     |                          ~~~~~~~~~~
   4 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-117 - 1]
Diagnostic 1: contextuallyUnnecessary (3:4 - 3:43)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | declare function fn(value: {}): void;
   3 | fn({} as string extends string ? {} : never);
     |    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-118 - 1]
Diagnostic 1: contextuallyUnnecessary (3:4 - 3:28)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | declare function fn(value: void): void;
   3 | fn((() => {})() as undefined);
     |    ~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-119 - 1]
Diagnostic 1: contextuallyUnnecessary (3:4 - 3:28)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | declare function fn(value: unknown): void;
   3 | fn((() => {})() as undefined);
     |    ~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-120 - 1]
Diagnostic 1: contextuallyUnnecessary (1:26 - 1:45)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   1 | const x: string | null = 'a' as string | null;
     |                          ~~~~~~~~~~~~~~~~~~~~
   2 | void x;
---
